# ModelBatch

./: README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: IMPLEMENTATION_SUMMARY.md  PROGRESS.md  api.md  design.md  getting_started.md  index.md  optuna_integration_design.md  test_plan_optuna_integration.md
examples/: README_consistency_issue.md  amp_demo.py  cifar10_lenet_benchmark.py  cifar10_optuna_demo.py  cifar10_simple_demo.py  grokking_transformer_benchmark.py  hf_custom_model_demo.py  hf_pretrained_demo.py  optuna_input_size_demo.py  optuna_integration_demo.py  quick_consistency_test.py  quick_consistency_test_dropout.py  simple_demo.py
examples/benchmark/: __init__.py  cifar10.py  grokking.py  probe.py  utils.py
src/modelbatch/: __init__.py  callbacks.py  core.py  data.py  huggingface_integration.py  logger.py  optimizer.py  optuna_integration.py  utils.py
tests/: test_amp_optimizer.py  test_consistency.py  test_core.py  test_custom_models.py  test_huggingface_integration.py  test_logger.py  test_models.py  test_optimizer.py  test_optuna_integration.py
